添加device接口
